# trykernel

./: CMakeLists.txt
application/: main.c
include/: knldef.h  sysdef.h  syslib.h
